// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StatusBadge rendering tests hasName true - isUsed false - test 1`] = `
<div>
  <span
    class="inline-flex items-center gap-1 rounded-full bg-orange-100 px-2 py-1 text-xs text-orange-800"
    data-testid="status-badge"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-alert h-3 w-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    Nicht verwendet
  </span>
</div>
`;

exports[`StatusBadge rendering tests hasName true - isUsed true - test 1`] = `
<div>
  <span
    class="inline-flex items-center gap-1 rounded-full bg-green-100 px-2 py-1 text-xs text-green-800"
    data-testid="status-badge"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-check h-3 w-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="m9 12 2 2 4-4"
      />
    </svg>
    Im Prompt verwendet
  </span>
</div>
`;
